--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,9 @@ repositories {
 dependencies {
     testImplementation 'junit:junit:4.12'
 
-    testCompile "org.spockframework:spock-core:1.3-groovy-2.5"
-    testCompile "cglib:cglib-nodep:3.3.0" //mocking concrete classes with spock
-    testCompile "org.objenesis:objenesis:3.1" //as above
+    testImplementation "org.spockframework:spock-core:1.3-groovy-2.5"
+    testImplementation "cglib:cglib-nodep:3.3.0" //mocking concrete classes with spock
+    testImplementation "org.objenesis:objenesis:3.1" //as above
 }
 
 gradlePlugin {
