--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.github.zafarkhaja:java-semver:0.9.0'
+
     testImplementation 'junit:junit:4.12'
 
     testImplementation "org.spockframework:spock-core:1.3-groovy-2.5"
