--- a/build.gradle
+++ b/build.gradle
@@ -27,19 +27,20 @@ dependencies {
 gradlePlugin {
     plugins {
         greeting {
+            //TODO rename to "org.shipkit.shipkit-auto-version" and make the project/jar consistent
             id = 'org.shipkit.auto.version'
             implementationClass = 'org.shipkit.auto.version.AutoVersionPlugin'
         }
     }
 }
 
+apply from: "$rootDir/gradle/integ-test.gradle"
+
 publishing { // docs: https://docs.gradle.org/current/userguide/publishing_maven.html
     publications {
         //Run this for local testing: "./gradlew publishMavenPublicationToMavenLocal"
         maven(MavenPublication) {
-            artifact jar
+            from components.java
         }
     }
 }
-
-apply from: "$rootDir/gradle/integ-test.gradle"
