--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,11 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [master]
+    tags-ignore: [v1.*] #TODO needed?
+  pull_request:
+    branches: [master]
 
 jobs:
   build:
