--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     testImplementation "org.objenesis:objenesis:3.1" //as above
 }
 
-apply from: "$rootDir/gradle/plugin-portal.gradle"
+apply from: "$rootDir/gradle/release.gradle"
 apply from: "$rootDir/gradle/integ-test.gradle"
 
 publishing { // docs: https://docs.gradle.org/current/userguide/publishing_maven.html
