--- a/gradle/release.gradle
+++ b/gradle/release.gradle
@@ -22,3 +22,10 @@ pluginBundle {
 
 ext.'gradle.publish.key' = System.getenv('GRADLE_PUBLISH_KEY')
 ext.'gradle.publish.secret' = System.getenv('GRADLE_PUBLISH_SECRET')
+
+task pushTag(type: Exec) {
+    description = "Creates and pushes tag. Hides secret key from git push output."
+    doFirst { println "Creating and pushing tag v$version" }
+    commandLine "./gradle/push-tag.sh", "v$version"
+    doLast { println "Pushed tag v$version" }
+}
