--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       run: ./gradlew build -i --scan --continue
     - name: Deploy to plugins.gradle.org
       if: success() && github.event_name == 'push' && github.ref == 'refs/heads/master'
-      run: ./gradlew pushTag publishPlugins -i --scan
+      run: ./gradlew createTag pushTag publishPlugins -i --scan
       env: 
           # Gradle env variables docs: https://docs.gradle.org/current/userguide/build_environment.html#sec:gradle_environment_variables
           GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
