--- a/gradle/release.gradle
+++ b/gradle/release.gradle
@@ -23,9 +23,23 @@ pluginBundle {
 ext.'gradle.publish.key' = System.getenv('GRADLE_PUBLISH_KEY')
 ext.'gradle.publish.secret' = System.getenv('GRADLE_PUBLISH_SECRET')
 
+def tagName = "v$version"
+
+task createTag {
+    description = "Creates a '$tagName' annotated tag"
+    doLast {
+        println "Creating tag $tagName"
+        exec { commandLine "git", "config", "user.email", "shipkit.org@gmail.com" }
+        exec { commandLine "git", "config", "user.name", "shipkit" }
+        exec { commandLine "git", "tag", "-a", "-m", "Release $tagName", tagName }
+        println "Created tag $tagName"
+    }
+}
+
 task pushTag(type: Exec) {
-    description = "Creates and pushes tag. Hides secret key from git push output."
-    doFirst { println "Creating and pushing tag v$version" }
-    commandLine "./gradle/push-tag.sh", "v$version"
-    doLast { println "Pushed tag v$version" }
+    mustRunAfter createTag
+    description = "Pushes the tag. Hides secret key from git push output."
+    doFirst { println "Pushing tag $tagName" }
+    commandLine "./gradle/push-tag.sh", tagName
+    doLast { println "Pushed tag $tagName" }
 }
