--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,14 +13,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2   # https://github.com/actions/checkout
+    - uses: actions/checkout@v2   # docs: https://github.com/actions/checkout
+    - name: Fetch all tags
+      run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
     - name: Run build
-      run: echo Pretending to run the build
-    - name: "Set up Ruby for changelog generation"
-      uses: actions/setup-ruby@v1 # https://github.com/marketplace/actions/setup-ruby-for-use-with-actions
-    - name: Generate changelog
+      run: ./gradlew build -i --scan --continue
+    - name: Deploy to plugins.gradle.org
+      if: success() && github.event_name == 'push' && github.ref == 'refs/heads/master'
+      run: ./gradlew createTag pushTag publishPlugins -i --scan
       env:
-        GRADLE_PUBLISH_SECRET = ${{secrets.GRADLE_PUBLISH_SECRET}}
-      run: |
-        gem install github_changelog_generator
-        github_changelog_generator --user shipkit --project shipkit-auto-version
+          # Gradle env variables docs: https://docs.gradle.org/current/userguide/build_environment.html#sec:gradle_environment_variables
+          GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
+          GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
