--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.shipkit.shipkit-auto-version' version "0.0.6"
+    id 'org.shipkit.shipkit-auto-version' version "0.0.25"
     id 'java-gradle-plugin'
     id "com.gradle.plugin-publish" version "0.10.1"
     id 'groovy'
@@ -18,6 +18,7 @@ repositories {
 }
 
 dependencies {
+    //TODO: fat jar, to be on the safe side, update the documentation
     implementation 'com.github.zafarkhaja:java-semver:0.9.0'
 
     testImplementation 'junit:junit:4.12'
