--- a/gradle/release.gradle
+++ b/gradle/release.gradle
@@ -23,6 +23,11 @@ pluginBundle {
 ext.'gradle.publish.key' = System.getenv('GRADLE_PUBLISH_KEY')
 ext.'gradle.publish.secret' = System.getenv('GRADLE_PUBLISH_SECRET')
 
+if (ext.'gradle.publish.key' && ext.'gradle.publish.secret') {
+    println "Gradle Plugin Portal environment variables: " +
+            "key=${ext.'gradle.publish.key'.substring(0, 3)}, secret=${ext.'gradle.publish.secret'.substring(0, 3)}"
+}
+
 def tagName = "v$version"
 
 task createTag {
