--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Fetch all tags
       run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*      
     - name: Run build
-      run: gradlew.bat build -i --scan --continue
+      run: .\gradlew.bat build -i --scan --continue
 
   build:
 
