--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,9 +30,9 @@ jobs:
       # when we build tags we may need to fetch the 'master' branch, too
     - name: Run build
       run: ./gradlew build --scan --continue
-    - name: Deploy to plugins.gradle.org
+    - name: Push tag and deploy to plugins.gradle.org
       if: success() && github.event_name == 'push' && github.ref == 'refs/heads/master'
-      run: ./gradlew createTag pushTag publishPlugins --scan
+      run: ./gradlew createTag publishPlugins --scan
       env:
           # Gradle env variables docs: https://docs.gradle.org/current/userguide/build_environment.html#sec:gradle_environment_variables
           GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
