--- a/gradle/release.gradle
+++ b/gradle/release.gradle
@@ -41,3 +41,16 @@ task createTag {
         println "Created tag $tagName"
     }
 }
+
+tasks.named("generateChangelog") {
+    previousRevision = "v" + project.ext.'shipkit-auto-version.previous-version'
+    readOnlyToken = "a0a4c0f41c200f7c653323014d6a72a127764e17"
+    repository = "shipkit/shipkit-changelog"
+}
+
+tasks.named("githubRelease") {
+    dependsOn tasks.named("generateChangelog")
+    repository = "shipkit/shipkit-changelog"
+    changelog = tasks.named("generateChangelog").get().outputFile
+    writeToken = System.getenv("GH_WRITE_TOKEN")
+}
