--- a/gradle/release.gradle
+++ b/gradle/release.gradle
@@ -42,15 +42,17 @@ task createTag {
     }
 }
 
+def genTask = tasks.named("generateChangelog").get()
+
 tasks.named("generateChangelog") {
     previousRevision = "v" + project.ext.'shipkit-auto-version.previous-version'
     readOnlyToken = "a0a4c0f41c200f7c653323014d6a72a127764e17"
-    repository = "shipkit/shipkit-changelog"
+    repository = genTask.repository
 }
 
 tasks.named("githubRelease") {
-    dependsOn tasks.named("generateChangelog")
-    repository = "shipkit/shipkit-changelog"
-    changelog = tasks.named("generateChangelog").get().outputFile
+    dependsOn genTask
+    repository = genTask.repository
+    changelog = genTask.outputFile
     writeToken = System.getenv("GH_WRITE_TOKEN")
 }
