--- a/gradle/release.gradle
+++ b/gradle/release.gradle
@@ -1,3 +1,9 @@
+apply plugin: "java-gradle-plugin"
+apply plugin: "com.gradle.plugin-publish"
+apply plugin: "org.shipkit.shipkit-auto-version"
+apply plugin: "org.shipkit.shipkit-changelog"
+apply plugin: "org.shipkit.shipkit-gh-release"
+
 // docs: https://plugins.gradle.org/docs/publish-plugin
 gradlePlugin {
     plugins {
