--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,10 @@ name: CI
 
 on:
   push:
-    branches: [master]
+    branches: ['**']
     tags-ignore: [v*]
   pull_request:
-    branches: [master]
+    branches: ['**']
 
 jobs:
   windows_build:
