--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,8 @@ on:
 
 jobs:
   windows_build:
-    if: "! contains(toJSON(github.event.commits.*.message), '[skip-ci]')"
+    # TODO: test if we need to duplicate this in the other workflow:
+    if: "! contains(toJSON(github.event.commits.*.message), '[skip ci]')"
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2   # docs: https://github.com/actions/checkout
