--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ on:
 
 jobs:
   gradle_wrapper_validation:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2   # docs: https://github.com/actions/checkout
       with:
