Started using 'previous-tag' property
Recently new property 'shipkit-auto-version.previous-tag' has been exposed. It allows for getting previous revision in more convenient way, what is hereby done in release.gradle file, instead of
using 'previous-version' property.
New property is now also covered with README.md documentation.

--- a/gradle/release.gradle
+++ b/gradle/release.gradle
@@ -35,7 +35,7 @@ if (ext.'gradle.publish.key' && ext.'gradle.publish.secret') {
 }
 
 tasks.named("generateChangelog") {
-    previousRevision = "v" + project.ext.'shipkit-auto-version.previous-version'
+    previousRevision = 'shipkit-auto-version.previous-tag'
     readOnlyToken = "a0a4c0f41c200f7c653323014d6a72a127764e17"
     repository = "shipkit/shipkit-auto-version"
 }
